<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ffbacbff">

    <TextView
        android:id="@+id/header_text"
        android:text="@string/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:textSize="24sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            style="@style/AppTheme.Button"
            android:text="@string/spotify_streamer"
            android:id="@+id/button_spotify_streamer"
            android:singleLine="false"
            android:clickable="true"
            android:onClick="launchApplication"/>

        <Button
            style="@style/AppTheme.Button"
            android:text="@string/scores_app"
            android:id="@+id/button_scores_app"
            android:singleLine="false"
            android:clickable="true"
            android:onClick="launchApplication"/>

        <Button
            style="@style/AppTheme.Button"
            android:text="@string/library_app"
            android:id="@+id/button_library_app"
            android:singleLine="false"
            android:clickable="true"
            android:onClick="launchApplication"/>

        <Button
            style="@style/AppTheme.Button"
            android:text="@string/build_it_bigger"
            android:id="@+id/button_build_it_bigger"
            android:singleLine="false"
            android:clickable="true"
            android:onClick="launchApplication"/>

        <Button
            style="@style/AppTheme.Button"
            android:text="@string/xyz_reader"
            android:id="@+id/button_xyz_reader"
            android:singleLine="false"
            android:clickable="true"
            android:onClick="launchApplication"/>

        <Button
            style="@style/AppTheme.Button"
            android:text="@string/capstone_app"
            android:id="@+id/button_capstone_app"
            android:background="#ff7fff95"
            android:singleLine="false"
            android:clickable="true"
            android:onClick="launchApplication"/>
    </LinearLayout>


</LinearLayout>
